2011-08-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* misc/i2c.c: Bugfix.

2011-08-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/.cvsignore: New file.
	* include/bspopts.h.in: Removed file.

2011-07-04	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* misc/nand-mlc-erase-block-safe.c, misc/nand-mlc-write-blocks.c,
	include/nand-mlc.h: Fixed write blocks.

2011-07-01	Stephan Hoffmann <sho@reLinux.de>
		Sebastian Huber <sebastian.huber@embedded-brains.de>

	* misc/nand-mlc-erase-block-safe.c: New file
	* Makefile.am: Reflect change from above.
	* misc/nand-mlc-write-blocks.c: Use lpc32xx_mlc_erase_block_safe_3().
	* include/nand-mlc.h: Bad block handling.

2011-06-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Fix broken path to cache_.h.

2011-06-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Fix broken path to clockdrv_shell.h.

2011-06-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Cache manager changes.

2011-05-19	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Install new header files.
	* include/bsp.h, include/emc.h, include/lpc32xx.h, misc/emc.c: Update
	for API changes.

2011-03-29	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* configure.ac, include/bspopts.h.in: New BSP option
	LPC32XX_SCRATCH_AREA_SIZE.  Disable BSP option
	LPC32XX_DISABLE_READ_ONLY_PROTECTION for all BSPs.
	* include/boot.h: Removed application specific defines.
	* include/nand-mlc.h, misc/nand-mlc.c: Changed configuration layout.
	* include/mmu.h, misc/mmu.c: Documentation.  Bugfix.
	* include/bsp.h, startup/bspstarthooks.c, misc/restart.c,
	startup/linkcmds.lpc32xx_mzx, startup/linkcmds.lpc32xx_mzx_stage_1,
	startup/linkcmds.lpc32xx_mzx_stage_2,
	startup/linkcmds.lpc32xx_phycore: Support for scratch area.  Moved
	code into macros for reusability.

2011-02-21	Sebastian Huber <sebastian.huber@embedded-brains.de>
