@@ -40,20 +40,53 @@ void lpc32xx_mlc_zero_pages(uint32_t page_begin, uint32_t page_end)
   }
 }
 
-static bool is_bad_page(
+static rtems_status_code is_valid_page(
   uint32_t page_begin,
   uint32_t page_offset
 )
 {
+  rtems_status_code sc = RTEMS_SUCCESSFUL;
   uint32_t spare [MLC_LARGE_SPARE_WORD_COUNT];
 
   memset(spare, 0, MLC_LARGE_SPARE_SIZE);
-  lpc32xx_mlc_read_page(
+
+  sc = lpc32xx_mlc_read_page(
     page_begin + page_offset,
     lpc32xx_magic_zero_begin,
-    spare
+    spare,
+    NULL
   );
-  return lpc32xx_mlc_is_bad_page(spare);
+  if (sc == RTEMS_SUCCESSFUL) {
+    if (lpc32xx_mlc_is_bad_page(spare)) {
+      sc = RTEMS_INCORRECT_STATE;
+    }
+  }
+
+  return sc;
+}
+
+static rtems_status_code is_valid_block(uint32_t page_begin)
+{
+  rtems_status_code sc = RTEMS_SUCCESSFUL;
+
+  if (lpc32xx_mlc_page_size() == 512 && lpc32xx_mlc_io_width() == 8) {
+    sc = is_valid_page(page_begin, 0);
+    if (sc == RTEMS_SUCCESSFUL) {
+      sc = is_valid_page(page_begin, 1);
+    }
+  } else {
+    sc = RTEMS_NOT_IMPLEMENTED;
+  }
+
+  return sc;
+}
+
+rtems_status_code lpc32xx_mlc_is_valid_block(uint32_t block_index)
+{
+  uint32_t pages_per_block = lpc32xx_mlc_pages_per_block();
+  uint32_t page_begin = block_index * pages_per_block;
+
+  return is_valid_block(page_begin);
 }
 
 rtems_status_code lpc32xx_mlc_erase_block_safe_3(
@@ -64,22 +97,15 @@ rtems_status_code lpc32xx_mlc_erase_block_safe_3(
 {
   rtems_status_code sc = RTEMS_SUCCESSFUL;
 
-  if (is_bad_page(page_begin, 0)) {
-    return RTEMS_INCORRECT_STATE;
+  sc = is_valid_block(page_begin);
+  if (sc == RTEMS_SUCCESSFUL) {
+    sc = lpc32xx_mlc_erase_block(block_index);
+    if (sc == RTEMS_UNSATISFIED) {
+      lpc32xx_mlc_zero_pages(page_begin, page_end);
+    }
   }
 
-  if (is_bad_page(page_begin, 1)) {
-    return RTEMS_INCORRECT_STATE;
-  }
-
-  sc = lpc32xx_mlc_erase_block(block_index);
-  if (sc != RTEMS_SUCCESSFUL) {
-    lpc32xx_mlc_zero_pages(page_begin, page_end);
-
-    return RTEMS_IO_ERROR;
-  }
-
-  return RTEMS_SUCCESSFUL;
+  return sc;
 }
 
 rtems_status_code lpc32xx_mlc_erase_block_safe(uint32_t block_index)
